--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,12 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.2.3
   record: ^5.0.0
-  just_audio: ^0.9.39
-  permission_handler: ^10.0.0
+  flutter_local_notifications: ^17.2.2
+  flutter_localization: ^0.2.1
+  bottom_navy_bar: ^6.1.0
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +72,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
